# tui

./: Cargo.toml  build.rs  flake.nix  shell.nix
src/: build.rs  error.rs  lib.rs  prompt.rs  validator.rs
src/cli/: mod.rs  tracing.rs
src/config/toml/: mod.rs
src/config/toml/himalaya/: config.rs  mod.rs  wizard.rs
src/himalaya/: backend.rs  choice.rs  config.rs  editor.rs  id_mapper.rs  mod.rs  wizard.rs
src/terminal/: config.rs  mod.rs  print.rs  prompt.rs  tracing.rs
src/terminal/cli/: arg.rs  mod.rs  printer.rs  tracing.rs
src/terminal/wizard/: imap.rs  maildir.rs  mod.rs  notmuch.rs  sendmail.rs  smtp.rs
src/wizard/: imap.rs  maildir.rs  mod.rs  notmuch.rs  sendmail.rs  smtp.rs
