[package]
name = "pimalaya-tui"
description = "Collection of crossterm widgets shared accross Pimalaya terminal-based projects"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = []
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/pimalaya-tui/latest/pimalaya_tui/"
repository = "https://github.com/pimalaya/tui/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--document-private-items"]

[features]
default = [
  #"email",
  #"path",

  #"keyring",
  #"oauth2",

  #"imap",
  #"maildir",
  #"notmuch",
  #"smtp",
  #"sendmail",

  #"cli",
  #"config",
  #"tracing",

  #"himalaya",
  #"wizard",
]

email = ["dep:email_address"]
path = ["dep:shellexpand-utils"]

keyring = ["email-lib/keyring", "secret-lib?/keyring-tokio"]
oauth2 = ["dep:oauth-lib", "email-lib/oauth2"]

imap = ["dep:email-lib", "dep:secret-lib", "email", "email-lib/autoconfig", "email-lib/imap"]
maildir = ["dep:email-lib", "dep:dirs", "email-lib/maildir", "path"]
notmuch = ["dep:email-lib", "email-lib/notmuch", "path"]
smtp = ["dep:email-lib", "dep:secret-lib", "email", "email-lib/autoconfig", "email-lib/smtp"]
sendmail = ["dep:email-lib", "email-lib/sendmail"]

cli = ["dep:clap", "dep:color-eyre", "dep:serde", "dep:serde_json", "dep:shellexpand-utils"]
config = ["dep:color-eyre", "dep:dirs", "dep:serde", "dep:serde-toml-merge", "dep:toml", "dep:toml_edit", "dep:tracing"]
tracing = ["dep:color-eyre", "dep:tracing", "dep:tracing-error", "dep:tracing-subscriber"]

himalaya = ["dep:async-trait", "dep:comfy-table", "dep:email-lib", "dep:process-lib", "email-lib/derive", "config"]
wizard = ["dep:tokio"]

[dependencies]
async-trait = { version = "0.1", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
color-eyre = { version = "0.6", optional = true }
comfy-table = { version = "7.1", optional = true }
crossterm = { version = "0.27", features = ["serde"] }
dirs = { version = "4", optional = true }
email-lib = { version = "=0.25.0", optional = true, default-features = false, features = ["tracing"] }
email_address = { version = "0.2", optional = true, default-features = false }
inquire = "0.7"
oauth-lib = { version = "=0.1.1", optional = true }
process-lib = { version = "=0.4.2", optional = true, features = ["derive"] }
secret-lib = { version = "=0.4.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-toml-merge = { version = "0.3", optional = true }
serde_json = { version = "1", optional = true }
shellexpand-utils = { version = "=0.2.1", optional = true }
thiserror = "1"
tokio = { version = "1.40", optional = true, default-features = false, features = ["process"] }
toml = { version = "0.8", optional = true }
toml_edit = { version = "0.22", optional = true }
tracing = { version = "0.1", optional = true }
tracing-error = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }

[patch.crates-io]
imap-codec = { git = "https://github.com/duesee/imap-codec" }
imap-next = { git = "https://github.com/duesee/imap-next" }
imap-client = { git = "https://github.com/pimalaya/imap-client" }
email-lib = { git = "https://github.com/pimalaya/core" }
