[package]
name = "pimalaya-tui"
description = "Collection of crossterm widgets shared accross Pimalaya projects"
version = "0.2.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = []
keywords = []
homepage = "https://pimalaya.org/"
documentation = "https://docs.rs/pimalaya-tui/latest/pimalaya_tui/"
repository = "https://github.com/pimalaya/tui/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full = [
  "himalaya",
  "imap",
  "maildir",
  "notmuch",
  "smtp",
  "sendmail",
  "pgp-commands",
  "pgp-gpg",
  "pgp-native",
  "cli",
  "email",
  "path",
  "config",
  "keyring",
  "oauth2",
  "sled",
  "tracing",
  "wizard",
  "build-envs",
  "rustls",
]

# Pimalaya projects
#
himalaya = ["dep:async-trait", "dep:comfy-table", "dep:email-lib", "dep:mml-lib", "dep:petgraph", "dep:process-lib", "dep:serde", "email-lib?/derive", "email-lib?/thread", "config"]

# Email backends
#
imap = ["dep:email-lib", "dep:secret-lib", "dep:once_cell", "email", "email-lib?/autoconfig", "email-lib?/imap"]
maildir = ["dep:email-lib", "dep:dirs", "email-lib?/maildir", "path"]
notmuch = ["dep:email-lib", "email-lib?/notmuch", "path"]
smtp = ["dep:email-lib", "dep:secret-lib", "dep:once_cell", "email", "email-lib?/autoconfig", "email-lib?/smtp"]
sendmail = ["dep:email-lib", "email-lib?/sendmail"]

# PGP backends
#
pgp = []
pgp-commands = ["email-lib?/pgp-commands", "mml-lib?/pgp-commands", "pgp"]
pgp-gpg = ["email-lib?/pgp-gpg", "mml-lib?/pgp-gpg", "pgp"]
pgp-native = ["email-lib?/pgp-native", "mml-lib?/pgp-native", "pgp"]

# Terminal CLI shared code
#
cli = ["dep:clap", "dep:color-eyre", "dep:serde", "dep:serde_json", "dep:shellexpand-utils"]

# Terminal prompts
#
email = ["dep:email_address"]
path = ["dep:shellexpand-utils"]

# TLS
#
rustls = ["email-lib?/rustls"]
native-tls = ["email-lib?/native-tls"]

# Other shared stuff
#
config = ["dep:async-trait", "dep:color-eyre", "dep:dirs", "dep:serde-toml-merge", "dep:toml", "dep:toml_edit", "dep:tracing"]
keyring = ["email-lib?/keyring", "secret-lib?/keyring"]
oauth2 = ["dep:oauth-lib", "email-lib?/oauth2"]
tracing = ["dep:color-eyre", "dep:tracing", "dep:tracing-error", "dep:tracing-subscriber"]
wizard = ["dep:tokio", "email-lib?/autoconfig", "config"]
build-envs = ["dep:git2", "dep:serde", "dep:toml"]

[dev-dependencies]
pimalaya-tui = { path = ".", features = ["full"] }

[dependencies]
async-trait = { version = "0.1", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
color-eyre = { version = "0.6", optional = true }
comfy-table = { version = "7.1", optional = true }
crossterm = { version = "0.27", features = ["serde"] }
dirs = { version = "4", optional = true }
email-lib = { version = "0.26", optional = true, default-features = false, features = ["tokio-rustls"] }
email_address = { version = "0.2", optional = true, default-features = false }
git2 = { version = "0.19", optional = true, default-features = false }
inquire = "0.7"
md5 = "0.7"
mml-lib = { version = "1", optional = true, default-features = false, features = ["tokio", "rustls", "compiler", "interpreter", "derive"] }
oauth-lib = { version = "1", optional = true, default-features = false, features = ["tokio", "rustls"] }
once_cell = { version = "1.20", optional = true }
petgraph = { version = "0.6", optional = true }
process-lib = { version = "1", optional = true, features = ["tokio", "derive"] }
secret-lib = { version = "1", optional = true, default-features = false, features = ["tokio", "rustls", "command"] }
serde = { version = "1", features = ["derive"], optional = true }
serde-toml-merge = { version = "0.3", optional = true }
serde_json = { version = "1", optional = true }
shellexpand-utils = { version = "=0.2.1", optional = true }
sled = { version = "=0.34.7", optional = true }
thiserror = "2"
tokio = { version = "1.40", optional = true, default-features = false, features = ["process"] }
toml = { version = "0.8", optional = true }
toml_edit = { version = "0.22", optional = true }
tracing = { version = "0.1", optional = true }
tracing-error = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }
